--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Interval App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section class="clock">
+      <div class="minutes">
+        <div class="min"></div>
+      </div>
+      <div class="seconds">
+        <div class="sec"></div>
+      </div>
+    </section>
+    <section class="timer">
+      <form id="timerForm">
+        <label for="timerInput"></label>
+        <input type="text" id="timerInput" placeholder="Example: 15:00">
+        <button type="button" id="startTimerBtn">Start Timer</button>
+      </form>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
