fått in ett stoppur, bara en grund

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="timer-container">
+      <h1 id="timer"></h1>
+      <button id="startBtn">Start</button>
+      <button id="stopBtn">Stop</button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
