--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>INTERVAL</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main>
+      <section class="main-wrapper">
+        <img src="/src/images/logo.svg" alt="logo">
+      </section>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
