--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <option value="25">25 minutes</option>
       </select>
       <button id="startTimerBtn">Start Timer</button>
+      <button id="stopTimerBtn" style="display: none;">Stop Timer</button>
     </div>
     
     <div class="clock">
