still not working

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     
     <div class="clock">
-      <div class="hand minute-hand"></div>
-      <div class="hand second-hand"></div>
+      <div class="min-pointer"></div>
+      <div class="sec-pointer"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
