--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="timer-container">
       <h1 id="timer"></h1>
       <button id="startBtn">Start</button>
-      <button id="stopBtn">Stop</button>
+      <button id="stopBtn">Abort Timer</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
