--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Vite + TS</title>
   </head>
   <body>
+
+
+    <div id="timer-wrapper">
+      <div id="timer-container"></div>
+    </div>
+    <label for="durationInput">Timer Duration (minutes):</label>
+    <input type="number" id="durationInput" min="1" step="1" value="5">
+    <button id="startButton">START TIMER</button>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
