--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 
 <body>
 
-
- 
   <div id="timer-wrapper">
     <div id="timer-container"></div>
   </div>
@@ -19,6 +17,7 @@
     <label for="durationInput">Timer Duration (minutes): </label>
     <input type="number" id="durationInput" min="1" step="1" value="5">
     <button id="startButton">Start Timer</button>
+    <button id="stopButton">Stop Timer</button>
   </div>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
