--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <h1 id="timer"></h1>
       <button id="startBtn">Start</button>
       <button id="stopBtn">Abort Timer</button>
+      <button id ="leftLess">Left-</button>
+      <button id ="righMore">Righ+</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
