--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       <section class="main-wrapper">
         <img src="/src/images/logo.svg" alt="logo">
       </section>
+
+<!-- Change timer dropdown -->
+
+
+<nav>
+  <ul>
+    <li><a href="#">ANALOG TIMER</a></li>
+    <li><a href="#">DIGITAL TIMER</a></li>
+    <li><a href="#">VISUAL TIMER</a></li>
+  </ul>
+</nav>
+
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
