--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,10 +17,11 @@
         <option value="25">25 minutes</option>
       </select>
       <button id="startTimerBtn">Start Timer</button>
-      <button id="stopTimerBtn" style="display: none;">Stop Timer</button>
+      <button id="stopTimerBtn" style="display: none">Stop Timer</button>
     </div>
-    
+
     <div class="clock">
+      <img src="/src/images/clock.svg" alt="" />
       <div class="min-pointer"></div>
       <div class="sec-pointer"></div>
     </div>
