--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,23 +7,21 @@
     <title>INTERVAL</title>
   </head>
   <body>
-    <main>
-      <section class="main-wrapper">
-        <img src="/src/images/logo.svg" alt="logo">
-      </section>
+    <!-- Change timer dropdown -->
+    <header>
+      <div class="logo-box">
+        <img src="./src/images/navicon.svg" alt="icon" class="logo" />
+      </div>
+     
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">ANALOG TIMER</a></li>
+        <li><a href="#">DIGITAL TIMER</a></li>
+        <li><a href="#">VISUAL TIMER</a></li>
+      </ul>
+    </nav>
 
-<!-- Change timer dropdown -->
-
-
-<nav>
-  <ul>
-    <li><a href="#">ANALOG TIMER</a></li>
-    <li><a href="#">DIGITAL TIMER</a></li>
-    <li><a href="#">VISUAL TIMER</a></li>
-  </ul>
-</nav>
-
-    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
