visual timer finsihed

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-  <div id="timer-wrapper">
-    <div id="timer-container"></div>
+  <div id="timer-container">
+    <div id="timer"></div>
   </div>
-  <div id="controls-wrapper">
-    <label for="durationInput">Timer Duration (minutes): </label>
-    <input type="number" id="durationInput" min="1" step="1" value="5">
+  <div id="timeInput">
+    <label for="duration">Enter time in minutes:</label>
+    <input type="number" id="duration" min="1" step="1" value="5">
     <button id="startButton">Start Timer</button>
     <button id="stopButton">Stop Timer</button>
   </div>
