alarm bell working prog

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,10 @@
   <body>
     <main>
       <section class="main-wrapper">
-        <img src="/src/images/logo.svg" alt="logo">
+        <div class="alarm-container">
+          <img src="/src/images/alarm icon.svg" alt="logo" />
+          <h1>Times up!</h1>
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
