--- a/index.html
+++ b/index.html
@@ -7,20 +7,13 @@
     <title>INTERVAL</title>
   </head>
   <body>
-    <!-- Change timer dropdown -->
-    <header>
-      <div class="logo-box">
-        <img src="./src/images/navicon.svg" alt="icon" class="logo" />
-      </div>
-     
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#">ANALOG TIMER</a></li>
-        <li><a href="#">DIGITAL TIMER</a></li>
-        <li><a href="#">VISUAL TIMER</a></li>
-      </ul>
-    </nav>
+    <!-- Paus image -->
+    <div class="pauseContainer">
+      <img src="./src/images/pause.svg" alt="pause">
+      <h1>Pause & breath</h1>
+      <p>Timer som räknar ned</p>
+      <button>NO PAUSE, GO NOW!</button>
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
