Times up view almost complete

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <main>
-      <section class="main-wrapper">
         <div class="alarm-container">
           <img src="/src/images/alarm icon.svg" alt="logo" />
           <h1>Times up!</h1>
         </div>
-      </section>
+      <div>
+        <button>set new timer</button>
+      </div>
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
