--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           <img src="/src/images/alarm icon.svg" alt="logo" />
           <h1>Times up!</h1>
         </div>
-      <div>
-        <button>set new timer</button>
+      <div class="button-container">
+        <button class="timerButton">set new timer</button>
       </div>
     </main>
     <script type="module" src="/src/main.ts"></script>
