--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="pauseContainer">
       <img src="./src/images/pause.svg" alt="pause">
       <h1>Pause & breath</h1>
-      <p>Timer som räknar ned</p>
+      <p id="breakCountdown">5:00</p>
       <button>NO PAUSE, GO NOW!</button>
     </div>
 
