--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./src/images/pause.svg" alt="pause">
       <h1>Pause & breath</h1>
       <p id="breakCountdown">5:00</p>
-      <button>NO PAUSE, GO NOW!</button>
+      <button id="abortBreakbutton">NO PAUSE, GO NOW!</button>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
