--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,8 +11,6 @@
       <h1 id="timer"></h1>
       <button id="startBtn">Start</button>
       <button id="stopBtn">Abort Timer</button>
-      <button id ="leftLess">Left-</button>
-      <button id ="righMore">Righ+</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
