working on switch case

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INTERVAL</title>
+    
   </head>
   <body>
     <!-- Change timer dropdown -->
@@ -16,11 +17,21 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#">ANALOG TIMER</a></li>
-        <li><a href="#">DIGITAL TIMER</a></li>
+        <li><a href="#analogTimer">ANALOG TIMER</a></li>
+        <li><a href="#digitalTimer">DIGITAL TIMER</a></li>
         <li><a href="#">VISUAL TIMER</a></li>
       </ul>
     </nav>
+    <div id="analogTimer" class="timer-content">
+      <h1>hallå</h1>
+      <!-- Lägg till det specifika innehållet för Analog Timer här -->
+      <!-- html elementen som ligger i analog branchen -->
+    </div>
+    <div id="digitalTimer" class="timer-content">
+      <h1>hej</h1>
+      <!-- Lägg till det specifika innehållet för Analog Timer här -->
+      <!-- html elementen som ligger i analog branchen -->
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
