--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#analogTimer">ANALOG TIMER</a></li>
         <li><a href="#digitalTimer">DIGITAL TIMER</a></li>
-        <li><a href="#">VISUAL TIMER</a></li>
+        <li><a href="#visualTimer">VISUAL TIMER</a></li>
       </ul>
     </nav>
     <div id="analogTimer" class="timer-content">
@@ -47,6 +47,11 @@
       </div>
     </div>
     <div id="digitalTimer" class="timer-content">
+      <h1>hej</h1>
+      <!-- Lägg till det specifika innehållet för Analog Timer här -->
+      <!-- html elementen som ligger i analog branchen -->
+    </div>
+    <div id="visualTimer" class="timer-content">
       <h1>hej</h1>
       <!-- Lägg till det specifika innehållet för Analog Timer här -->
       <!-- html elementen som ligger i analog branchen -->
