--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div id="app"></div>
+  <div id="visual-container"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
