--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <!-- html elementen som ligger i analog branchen -->
     </div>
     <div id="visualTimer" class="timer-content">
-      <h1>hej</h1>
-      <!-- Lägg till det specifika innehållet för Analog Timer här -->
+      <div id="visual-container"></div>
+      <!-- Lägg till det specifika innehållet för Visual Timer här -->
       <!-- html elementen som ligger i analog branchen -->
     </div>
 
