--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>INTERVAL</title>
   </head>
   <body>
-    <!-- Paus image -->
+    <!-- Paus container -->
     <div class="pauseContainer">
       <img src="./src/images/pause.svg" alt="pause">
       <h1>Pause & breath</h1>
       <p id="breakCountdown">5:00</p>
       <button id="abortBreakbutton">NO PAUSE, GO NOW!</button>
     </div>
+    <!-- Paus container -->
 
     <script type="module" src="/src/main.ts"></script>
   </body>
