ready for merge

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="timers-container"></div>
+    <div id="settimers-container"></div>
 
     
     <script type="module" src="/src/main.ts"></script>
