updated submain with settimer and logo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
       <div class="logo-box">
         <img src="./src/images/navicon.svg" alt="icon" class="logo" />
+    
       </div>
-     
     </header>
     <nav>
-      <ul>
+      <ul class="dropdown-menu">
         <li><a href="#analogTimer">ANALOG TIMER</a></li>
         <li><a href="#digitalTimer">DIGITAL TIMER</a></li>
         <li><a href="#visualTimer">VISUAL TIMER</a></li>
