--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div class="timer-container">
-      <h1 id="timer"></h1>
-      <button id="startBtn">Start</button>
-      <button id="stopBtn">Abort Timer</button>
+    
+    <div class="digitalContainer" >
+     <p id="digitalTimer">5:00</p>
+      <button id="abortTimer">Abort timer</button>
+    </div>
+    Digital timer container  
+
+
     </div>
     <div id="settimers-container"></div>
 
