--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#analogTimer">ANALOG TIMER</a></li>
         <li><a href="#digitalTimer">DIGITAL TIMER</a></li>
         <li><a href="#visualTimer">VISUAL TIMER</a></li>
+        <li><a href="#setTimer">SET TIMER</a></li>
       </ul>
     </nav>
     <div id="analogTimer" class="timer-content">
@@ -53,6 +54,11 @@
       <!-- Lägg till det specifika innehållet för Visual Timer här -->
       <!-- html elementen som ligger i analog branchen -->
     </div>
+    <div id="setTimer" class="timer-content">
+      <div id="settimers-container"></div>
+      <!-- Lägg till det specifika innehållet för Visual Timer här -->
+      <!-- html elementen som ligger i analog branchen -->
+    </div>
     <!-- Paus container -->
     <div class="pauseContainer" style="display: none" ;>
       <img src="./src/images/pause.svg" alt="pause" />
@@ -62,7 +68,7 @@
     </div>
     <!-- Paus container -->
 
-    <div id="settimers-container"></div>
+    <!-- <div id="settimers-container"></div> -->
 
     <script type="module" src="/src/main.ts"></script>
   </body>
