--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>INTERVAL</title>
   </head>
   <body>
-    <main>
+    <div class="alarm-wrapper">
         <div class="alarm-container">
           <img src="/src/images/alarm icon.svg" alt="logo" />
           <h1>Times up!</h1>
@@ -15,7 +15,7 @@
       <div class="button-container">
         <button class="timerButton">set new timer</button>
       </div>
-    </main>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
