--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
     <div id="visualTimer" class="timer-content">
       <div id="visual-container"></div>
+      <button id ="pauseVisual">Pause</button>
       <!-- Lägg till det specifika innehållet för Visual Timer här -->
       <!-- html elementen som ligger i analog branchen -->
     </div>
