--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
       <!-- html elementen som ligger i analog branchen -->
     </div>
     <div id="visualTimer" class="timer-content">
+
+      
       <div id="visual-container"></div>
-      <button id ="pauseVisual">Pause</button>
+      <div id="button-container">
+        <img id="startButtonVisual" src="src/images/play.svg" alt="Start Timer">
+        <img id="pauseVisual" src="src/images/pause-svgrepo-com.svg" alt="Paus Timer">
+      <img id="stopButtonVisual" src="src/images/stopicon.svg" alt="Stop Timer">
+      </div>
       <!-- Lägg till det specifika innehållet för Visual Timer här -->
       <!-- html elementen som ligger i analog branchen -->
     </div>
