--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    
-    <div class="digitalContainer" >
-     <p id="digitalTimer">5:00</p>
-     
-    </div>
-   
-    <div class = buttons>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + TS</title>
+</head>
+<body>
+  <div class="digitalContainer">
+    <p id="digitalTimer">5:00</p>
+  </div>
+
+  <div class="buttons">
     <button id="starttimer">Start</button>
-    <button id="set time">Set time</button>
-    <button id="abortTimer">Abort timer</button>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-</html>
+    <button id="pausbutton">Pause</button>
+    <button id="abortTimer">Abort Timer</button>
+    <button id="setTime">Set Time</button>
+  </div>
