--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
-</head>
-<body>
-  <div class="digitalContainer">
-    <p id="digitalTimer">5:00</p>
+<!-- DIGITAL TIMER -->
+<div id="digitalTimer" class="timer-content">
+  <div id="timer">00:00</div>
+
+  <div id="inputTime">
+    <label for="timeInput">Set Time (in minutes):</label>
+    <input type="number" id="timeInput" min="1" step="1" value="1" />
   </div>
 
-  <div class="buttons">
-    <button id="starttimer">Start</button>
-    <button id="pausbutton">Pause</button>
-    <button id="abortTimer">Abort Timer</button>
-    <button id="setTime">Set Time</button>
-  </div>
+  <button id="startButton">Start Timer</button>
+  <button id="stopButton" style="display: none">Stop Timer</button>
+</div>
+<!-- DIGITAL TIMER -->
