added pause to analog

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </select>
         <button id="startTimerBtn">Start Timer</button>
         <button id="stopTimerBtn" style="display: none">Stop Timer</button>
+        <button id="pauseTimerBtn">Pause Timer</button>
       </div>
 
     </div>
