--- a/index.html
+++ b/index.html
@@ -76,11 +76,27 @@
       <!-- html elementen som ligger i analog branchen -->
     </div>
     <!-- Paus container -->
-    <div class="pauseContainer" style="display: none" ;>
+    <div class="pauseContainer-1" style="display: none" ;>
       <img src="./src/images/pause.svg" alt="pause" />
       <h1>Pause & breath</h1>
       <p id="breakCountdown">5:00</p>
-      <button id="abortBreakbutton">NO PAUSE, GO NOW!</button>
+      <button id="abortBreakbutton-1">NO PAUSE, GO NOW!</button>
+    </div>
+    <!-- Paus container -->
+    <!-- Paus container -->
+    <div class="pauseContainer-2" style="display: none" ;>
+      <img src="./src/images/pause.svg" alt="pause" />
+      <h1>Pause & breath</h1>
+      <p id="breakCountdown">5:00</p>
+      <button id="abortBreakbutton-2">NO PAUSE, GO NOW!</button>
+    </div>
+    <!-- Paus container -->
+    <!-- Paus container -->
+    <div class="pauseContainer-3" style="display: none" ;>
+      <img src="./src/images/pause.svg" alt="pause" />
+      <h1>Pause & breath</h1>
+      <p id="breakCountdown">5:00</p>
+      <button id="abortBreakbutton-3">NO PAUSE, GO NOW!</button>
     </div>
     <!-- Paus container -->
 
